# DFlowP

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile-Frontend  Dockerfile.api  Dockerfile.event_broker  Dockerfile.eventsystem  Dockerfile.mongo  Dockerfile.plugin_clustering_dbscan  Dockerfile.plugin_clustering_hdbscan  Dockerfile.plugin_embeddata  Dockerfile.plugin_fetchfeeditems  Dockerfile.wheels  Dockerfile.worker  Jenkinsfile  Jenkinsfile-Frontend  Jenkinsfile.api  Jenkinsfile.event_broker  Jenkinsfile.eventsystem  Jenkinsfile.frontend  Jenkinsfile.mongo  Jenkinsfile.plugin_clustering_dbscan  Jenkinsfile.plugin_clustering_hdbscan  Jenkinsfile.plugin_embeddata  Jenkinsfile.plugin_fetchfeeditems  Jenkinsfile.stack  Jenkinsfile.worker  MIGRATION.md  README.md  TODOS.md  docker-compose.yml  install.sh  last_prompt.txt  main.py  migrate_embed_text_template.sh  migrate_repositories.py  modules.json  pyproject.toml  requirements.txt
.jenkins/: .gitignore  DFlowP-ci-job-template.xml
dflowp/: __init__.py
dflowp-packages/dflowp-core/: README.md  pyproject.toml  requirements.txt
dflowp-packages/dflowp-core/src/dflowp_core/: quality_aggregates.py
dflowp-packages/dflowp-core/src/dflowp_core/database/: __init__.py  data_item_repository.py  dataflow_repository.py  dataflow_state_repository.py  dataset_repository.py  event_repository.py  migrations.py  mongo.py  pipeline_repository.py  plugin_configuration_repository.py  process_repository.py
dflowp-packages/dflowp-core/src/dflowp_core/eventinterfaces/: __init__.py  event_bus.py  event_service.py
dflowp-packages/dflowp-core/src/dflowp_core/utils/: __init__.py  logger.py
docker/: generate_uibakery_env.sh  uibakery.env.example
docs/: API-DBDoc-Restructure-Plan.md  api-hoppscotch.json  api-reference.md  api-v1-data.md  ci-registry-cache-fallback-plan.md  migration-pipeline-dataflow-api.md  openapi.yaml
examples/: dataflowstate_example.json  inputdata_set.json  processconfig_example.json
(+199 files in other folders)
